--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
     "aws-sdk": "^2.817.0",
     "axios": "^0.21.1"
   },
-  "bundledDependencies": [],
+  "bundledDependencies": [
+    "aws-sdk",
+    "axios"
+  ],
   "keywords": [
     "cdk"
   ],
