--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,10 @@ jobs:
           directory: coverage
       - name: Anti-tamper check
         run: git diff --exit-code
-      - name: Push changes
-        run: git push --follow-tags origin $BRANCH
-        env:
-          BRANCH: ${{ github.ref }}
+      - name: Push commits
+        run: git push origin HEAD:${{ github.ref }}
+      - name: Push tags
+        run: git push --follow-tags origin ${{ github.ref }}
       - name: Upload artifact
         uses: actions/upload-artifact@v2.1.1
         with:
@@ -63,5 +63,5 @@ jobs:
         run: npx -p jsii-release@latest jsii-release-npm
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NPM_DIST_TAG: latest --access public
+          NPM_DIST_TAG: latest
           NPM_REGISTRY: registry.npmjs.org
