--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
     "url": "https://github.com/taimos/cdk-construct-github-notifier.git"
   },
   "scripts": {
-    "projen": "npx projen",
-    "start": "npx projen start",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
@@ -21,7 +19,9 @@
     "package": "npx projen package",
     "eslint": "npx projen eslint",
     "docgen": "npx projen docgen",
-    "compat": "npx projen compat"
+    "compat": "npx projen compat",
+    "projen": "npx projen",
+    "start": "npx projen start"
   },
   "author": {
     "name": "Taimos GmbH",
@@ -30,28 +30,35 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.90.0",
+    "@aws-cdk/aws-codepipeline": "^1.90.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.90.0",
-    "@taimos/projen": "^0.0.36",
+    "@aws-cdk/aws-events": "^1.90.0",
+    "@aws-cdk/aws-events-targets": "^1.90.0",
+    "@aws-cdk/aws-iam": "^1.90.0",
+    "@aws-cdk/aws-lambda": "^1.90.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.90.0",
+    "@aws-cdk/core": "^1.90.0",
+    "@taimos/projen": "^0.0.60",
     "@types/jest": "^26.0.20",
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "esbuild": "^0.8.44",
+    "esbuild": "^0.10.2",
     "eslint": "^7.19.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "jest-junit": "^12",
-    "jsii": "^1.20.1",
-    "jsii-diff": "^1.20.1",
-    "jsii-docgen": "^1.8.40",
-    "jsii-pacmak": "^1.20.1",
+    "jsii": "^1.26.0",
+    "jsii-diff": "^1.26.0",
+    "jsii-docgen": "^1.8.67",
+    "jsii-pacmak": "^1.26.0",
     "json-schema": "^0.3.0",
-    "projen": "^0.16.3",
-    "standard-version": "^9.0.0",
-    "ts-jest": "^26.5.1",
-    "typedoc": "^0.20.24",
+    "projen": "^0.17.17",
+    "standard-version": "^9",
+    "ts-jest": "^26.5.4",
+    "typedoc": "^0.20.34",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
@@ -65,14 +72,7 @@
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-codepipeline": "^1.90.0",
-    "@aws-cdk/aws-events": "^1.90.0",
-    "@aws-cdk/aws-events-targets": "^1.90.0",
-    "@aws-cdk/aws-iam": "^1.90.0",
-    "@aws-cdk/aws-lambda": "^1.90.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.90.0",
-    "@aws-cdk/core": "^1.90.0",
-    "aws-sdk": "^2.842.0",
+    "aws-sdk": "^2.874.0",
     "axios": "^0.21.1"
   },
   "bundledDependencies": [
@@ -86,7 +86,7 @@
   "license": "Apache-2.0",
   "version": "0.0.11",
   "publishConfig": {
-    "tag": "latest --access public"
+    "access": "public"
   },
   "jest": {
     "testMatch": [
